# jarvis

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING.ru.md  LICENSE  README.en.md  README.md  README.ru.md  SECURITY.md  THIRD-PARTY-NOTICES.md  package-lock.json  package.json
.claude/skills/release-jarvis/: SKILL.md
.github/workflows/: release.yml
docs/: BUILD.md  codex-summarizer-research-prompt.md  fix-tmux-path.md
docs/assets/: README.md
docs/release/: versioning-and-migration.md
docs/superpowers/plans/: 2026-06-11-hotkey-and-settings.md  2026-06-16-increment-8-capability-platform.md  2026-06-16-mac-distribution-phase1.md  2026-06-16-mac-onboarding-phase2.md  2026-06-18-increment-8-v2-plan-a-gate.md  2026-06-19-increment-9-stt-dictation.md  2026-06-27-conversational-voice-2a.md  2026-06-27-full-voice-assistant.md  2026-06-29-model-picker-onboarding.md  2026-06-29-multi-question-multiselect.md  2026-07-03-hotkeys-redesign.md
docs/superpowers/specs/: 2026-06-11-hotkey-and-settings-design.md  2026-06-11-power-plugins-design.md  2026-06-15-increment-7-voice-tts-design.md  2026-06-16-increment-8-capability-platform-design.md  2026-06-18-adopt-live-tmux-sessions-design.md  2026-06-19-increment-9-stt-service-design.md  2026-06-20-increment-10-wakeword-design.md  2026-06-21-stt-4bit-quantization-spec.md  2026-06-21-tts-native-migration-notes.md  2026-06-22-documentation-overhaul-design.md  2026-06-26-codex-cli-support-design.md  2026-06-26-model-manager-design.md  2026-06-26-voice-routing-design.md  2026-06-27-barge-in-2c-spike.md  2026-06-27-conversational-voice-design.md  2026-06-29-model-picker-onboarding-design.md  2026-07-02-hotkey-remap-design.md  2026-07-03-chat-turn-summaries-design.md  2026-07-03-hotkeys-redesign-design.md
scripts/: make-placeholder-icon.py  rcblock.mjs  setup.mjs  test.mjs
src/: commands.js  history.js  main.js  preload-toast.js  preload.js  settings.js  usage.js
src-tauri/: Cargo.toml  Info.plist  build.rs  dev-Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bridge.rs  claude_bin.rs  commands_catalog.rs  daemon.rs  history.rs  ipc.rs  launch.rs  limits.rs  log.rs  macos.rs  main.rs  metrics.rs  model.rs  onboarding.rs  ru.rs  screen_prompt.rs  server.rs  settings.rs  tail.rs  terminal.rs  tmux.rs  transcript.rs  tray.rs  turns.rs  usage.rs  util.rs  windows.rs
src-tauri/src/agent/: assistant.rs  mod.rs
src-tauri/src/backend/: codex.rs  codex_transcript.rs  gemini.rs  gemini_transcript.rs  mod.rs
src-tauri/src/capability/: confirm_panel.rs  gate.rs  grant.rs  mod.rs  registry.rs  tokens.rs
src-tauri/src/capability/native/: audit_cap.rs  chats.rs  control.rs  metrics.rs  mod.rs  notifications.rs  sessions.rs  settings_cap.rs  stt_cap.rs  tasks.rs  wakeword_cap.rs
src-tauri/src/convo/: bargein.rs  listen.rs  mod.rs  os.rs  plan.rs  skills.rs  snapshot.rs
src-tauri/src/install/: mod.rs
src-tauri/src/power/: assertion.rs  clamshell.rs  keep_awake.rs  mod.rs
src-tauri/src/route/: classify.rs  hud.rs  mod.rs  pick.rs  prompt.rs  score.rs  stage.rs
src-tauri/src/stt/: audio.rs  config.rs  dehallucinate.rs  dictation.rs  engine.rs  engine_whisper.rs  hub.rs  insert.rs  mic_permission.rs  mod.rs  sidecar.rs  transcripts.rs
src-tauri/src/voice/: composer.rs  config.rs  engine.rs  mod.rs  numerals.rs  player.rs  queue.rs  sidecar.rs
src-tauri/src/wakeword/: action.rs  config.rs  engine.rs  engine_oww.rs  mod.rs  verify.rs
src/plugins/: index.js
src/plugins/clamshell/: core.js  index.js
src/plugins/keep-awake/: engine.js  index.js
src/renderer/: index.html  renderer.js  toast.html  toast.js
ui/: bridge.js  index.html  onboarding.html  onboarding.js  renderer.js  settings2.js  toast-bridge.js  toast.html  toast.js  voice-history.js
