[package]
name = "jarvis"
version = "0.4.0"
description = "macOS menu-bar mission control for Claude Code and Codex sessions"
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
default-run = "jarvis"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
# preserve_order: не пересортировывать ключи чужих JSON (~/.claude/settings.json)
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
regex = "1"
chrono = "0.4"
libc = "0.2"
# голос (инкремент 7): проигрывание WAV на системный output
rodio = "0.19"
hound = "3"
flate2 = "1" # gzip для сжатого хранения аудио диктовок (перегенерация распознавания)
# клиент к Silero-сайдкару (localhost HTTP), blocking — зовём из voice-воркера
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
core-foundation = "0.10"
core-graphics = "0.24"
objc2 = "0.6"
# блоки Objective-C для AVCaptureDevice.requestAccessForMediaType:completionHandler:
block2 = "0.6"
# base64 для stt.transcribe capability (кодирование PCM в аргументах MCP)
base64 = "0.22"
# аудио-захват (инкр. 9, фаза 4): микрофон через CPAL + ресемпл 16кГц
cpal = "0.15.3"
rubato = "0.16.2"
# вставка текста (инкр. 9, фаза 5): clipboard snapshot/restore для ⌘V-вставки
arboard = "3"

[[bin]]
name = "jarvis"
path = "src/main.rs"

[[bin]]
name = "jarvis-setup"
path = "src/bin/setup.rs"

# MCP-сервер-мост для агента (инкр. 8): stdio JSON-RPC → unix-сокет демона
[[bin]]
name = "jarvis-mcp"
path = "src/bin/jarvis-mcp.rs"

# STT: Whisper-движок через whisper-rs (Metal, компилирует whisper.cpp через CMake).
# Требует: cmake ≥ 3.x (brew install cmake) + Xcode CLT.
# Без этих инструментов — cargo build --features whisper-native не запустится.
[features]
# whisper-native — В ДЕФОЛТЕ: иначе обычный `cargo build` собирает Whisper как стаб
# («whisper-native feature не включён»), и движок whisper-turbo молча ломается при
# ad-hoc сборках. cmake требуется всегда (есть локально + шаг в release.yml).
# Отключить можно явно: `cargo build --no-default-features`.
default = ["whisper-native"]
whisper-native = ["dep:whisper-rs"]
# wake-word через openWakeWord/ort (инкр. 10). ВЫКЛ по умолчанию: дефолтная сборка
# НЕ тянет onnxruntime и компилируется офлайн. Для работы нужны 3 ONNX-модели
# (ставит установщик) и нативный onnxruntime (download-binaries при сети либо
# bundled signed dylib + ORT_DYLIB_PATH для hardened runtime).
wakeword-ort = ["dep:ort"]
# STT-VAD: Silero-VAD (через voice_activity_detector) гейтит не-речь ДО Whisper/Qwen,
# чтобы фон/музыка/тишина не превращались в «слова». Тянет тот же ort (=2.0.0-rc.10),
# что и wakeword — одна onnxruntime на бинарь. ВКЛ в сборке (package.json/release.yml).
stt-vad = ["dep:voice_activity_detector"]

[dependencies.whisper-rs]
version = "0.16"
features = ["metal"]
optional = true

# ort запинен =2.0.0-rc.10: links=onnxruntime ⇒ одна версия ort на бинарь
# (совместимость с voice_activity_detector). Под фичами wakeword-ort / stt-vad.
[dependencies.ort]
version = "=2.0.0-rc.10"
optional = true

# Silero-VAD: бандлит ONNX-модель внутри крейта, использует тот же ort=2.0.0-rc.10.
[dependencies.voice_activity_detector]
version = "=0.2.1"
optional = true

[profile.release]
# панель — интерактивный UI, собираем с оптимизацией, но без LTO-долгостроя
opt-level = 2
